--- a/05-Node-Server/client/package.json
+++ b/05-Node-Server/client/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "http-server"
   },
-  "author": "",
+  "author": "Allison",
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.3.1",
